--- a/css/common.css
+++ b/css/common.css
@@ -12,3 +12,22 @@ body {
   color: #212121;
   line-height: 1.5;
 }
+
+
+.gallery {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  list-style: none;
+}
+
+
+.galery-img {
+  margin: 20px;
+  border: 1px solid black;
+  border-radius: 25px;
+  box-shadow:
+      0 4px 8px rgba(0, 0, 0, 0.3),
+      0 0 20px rgba(0, 255, 255, 0.4);;
+}
